Change card display grid fix alignments and margins

--- a/src/components/ExerciseListItem.module.css
+++ b/src/components/ExerciseListItem.module.css
@@ -1,9 +1,10 @@
 .card {
-    display: flex;
+    display: grid;
+    grid-template-columns: 4fr auto 2fr;
+    column-gap: 10px;
     align-items: center;
-    justify-content: space-between;
     padding: 0 0.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .part {
@@ -13,6 +14,7 @@
 .duration {
     font-size: 11px;
     color: var(--highlight);
+    text-align: right;
 }
 
 .wrapper {
@@ -36,7 +38,8 @@
     outline: none;
     background: none;
     color: var(--primary);
-    width: 2rem;
+    width: 1.2rem;
+    height: 1.2rem;
     margin: 0 0.2rem;
     text-align: center;
 }
